<resources>
    <string name="app_name">FoodHub</string>
    <string name="home">Home</string>
    <string name="post">Post</string>
    <string name="logger">Logger</string>
    <string name="welcome">Welcome, %1$s!</string>
    <string name="login">Log In</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <!-- logger screens   -->
    <string name="logger_title">Today</string>
    <string name="log">Log</string>
    <string name="breakfast">"Breakfast"</string>
    <string name="lunch">"Lunch"</string>
    <string name="snack">"Snack"</string>
    <string name="dinner">"Dinner"</string>
    <string name="search_res">Search result</string>
    <string name="back">Back</string>
    <string name="comment_prompt">Say something…</string>
    <string name="total_calories">Total Calories:</string>
    <string name="add">Attach Ingredients/Recipes</string>
</resources>